@@ -60,11 +60,6 @@ the rdup-util scripts can be found.
 Encrypt the files while backing up with \fIkeyfile\fR. This option
 inserts \fBcrypt.pl keyfile\fR in the pipeline. If both \fI-z\fR and
 \fI-k\fR are given a file is first zipped and then encrypted.
-.TP
-.B -l num
-Limit the transfer to 'num' bytes/second. This option is given to 
-\fBcstream\fR. See the manual page of cstream at the \-t option.
-.TP
 .B \-a
 Enable extended attributes. Write the uid/gid to the extended user
 attributes r_uid and r_gid.
