@@ -2,9 +2,9 @@ TODO:
 
 :rdup utils: 
 o split off rdup-utils and rdup-core?
-o placement of scripts in debian
 o slight refactoring for wrapper scripts, ala rdup-snapshot
 o rdup-backups(8)
+o rdup-dump.sh better
 
 :rdup:
 :tests:
